Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/DupTarget.out
DupTarget.java:12:53: compiler.err.repeated.annotation.target
1 error
